--- a/feature/favoritevacancy/src/main/res/values/strings.xml
+++ b/feature/favoritevacancy/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="add_letter">Добавить сопроводительное</string>
@@ -50,7 +50,5 @@
     <string name="vacancy_one">%d вакансия</string>
     <string name="vacancy_few">%d вакансии</string>
     <string name="vacancy_many">%d вакансий</string>
-    <string name="in_progress">ЭТА ФУНКЦИЯ В РАЗАРАБОТКЕ</string>
-
 
 </resources>
